add feedback api public

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,5 @@ NODE_ENV=
 MIDTRANS_SERVER_KEY=
 MIDTRANS_CLIENT_KEY=
 MIDTRANS_IS_PRODUCTION=
-FRONTEND_APP_URL=
-FRONTEND_URL=
+CORS_ALLOWED_ORIGINS=
+RASA_WEBHOOK_URL=
